<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:layout_margin="5dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView" android:layout_gravity="center|left|top" android:src="@android:drawable/sym_def_app_icon"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:id="@+id/lblProgramName" android:layout_gravity="center" android:textColor="#ffffff"
                android:textSize="10pt" android:layout_margin="5dp"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/aboutVersion"
                android:id="@+id/lblVersion" android:layout_gravity="center" android:layout_margin="5dp"
                android:textSize="7pt" android:textStyle="italic"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/aboutAuthor"
                android:id="@+id/lblAuthor" android:layout_margin="5dp" android:textSize="7pt"
                android:textStyle="italic"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnClose"
        android:id="@+id/btnClose" android:layout_marginTop="10dp"/>
</LinearLayout>